# iso26430-6-asm-prototype

./: .gitignore  CMakeLists.txt  README.md
docs/: constraints.md  iso26430-6-asm-implementation.md  protocol-vectors.md
docs/beamer/: iso26430-6-asm-standard-intro.tex
fixtures/certs/dev/: ca.cert.pem  ca.key.pem  client.cert.pem  client.key.pem  rogue-ca.cert.pem  rogue-ca.key.pem  rogue-client.cert.pem  rogue-client.key.pem  server.cert.pem  server.key.pem
fixtures/events/: default-events.jsonl
include/asm/: codec.hpp  common.hpp  event_log.hpp  le_key.hpp  query_spb.hpp  service.hpp
include/klv/: klv.hpp
include/security/: certificate_utils.hpp  openssl_init.hpp  tls_profile.hpp
include/transport/: socket.hpp  tls_client.hpp  tls_context.hpp  tls_server.hpp
references/: ISO_26430-6_2009(E)-Character_PDF_document.md  SSL-and-TLS-Designing-and-Building-Secure-Systems.md
scripts/: generate_dev_certs.sh  run_interop_smoke.sh
src/apps/: asm_initiator.cpp  asm_responder.cpp
src/asm/: codec.cpp  event_log.cpp  le_key.cpp  query_spb.cpp  service.cpp
src/klv/: klv.cpp
src/security/: certificate_utils.cpp  openssl_init.cpp  tls_profile.cpp
src/transport/: socket.cpp  tls_client.cpp  tls_context.cpp  tls_server.cpp
tests/: test_codec.cpp  test_main.cpp  test_service.cpp  test_tls.cpp  testkit.hpp
